--- a/index3.html
+++ b/index3.html
@@ -4,18 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    .button {
-        background-color: green;
-        border: 0;
-        padding: 10px;
-    }
-    .button:hover {
-        background-color: red;
+    <style>
+        .button{
+            background-color: green;
+            border: 0;
+            padding: 10px;
+        }
+        .button:hover {
+            background-color: red;
+        }
         .button:active {
             background-color: blue;
-    }
-    
+        }
+        .button:focus {
+            background-color: yellow;
+        }
+        input:focus {
+            background-color: violet;
+        }
+        .container .item:first-child{
+            background-color: red;
+        }
+        .container .item:nth-child(4){
+            background-color: green;
+        }
+        .container .item:Last-child{
+            background-color: yellow;
+        }
+    </style>
+</head>
+<body>
+    <!-- :hover = วาง active = คลิก focus = cursor-->
+        <input type="text">
+        <button class="button">Button</button>
 
-
-    < 
+        <div class="container">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
+            <div class="item">5</div>
+        </div>
+</body>
+</html>
