--- a/index4.html
+++ b/index4.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    .test {
-        color: red;
-    }
-
-    .test::first-letter {
-        
-    }
+    <style>
+        .test{
+            color: red
+        }
+        .test::first-letter{
+            font-size: 50px;
+        }
+        .test::before{
+            content: '?'
+        }
+        .test::after{
+            content: '!'
+        }
+    </style>
+</head>
+<body>
+    <div class="test">Testpatcharadnai</div>
+</body>
+</html>
