--- a/connect.html
+++ b/connect.html
@@ -8,12 +8,12 @@
 <body>
     <script>
         fetch('http://localhost:8000/users')
-        .then((response) => {
-            return response.json();
-        })
-        .then((responseData) => {
-            console.log('responseData',responseData);
-        })
+            .then((response) => {
+                return response.json()
+            })
+            .then((responseData) => {
+                console.log('responseData',responseData)
+            })
     </script>
 </body>
 </html>
